--- a/build.xml
+++ b/build.xml
@@ -54,6 +54,37 @@
     <exclude name="**/?*.clj"/>
   </patternset>
   
+  <!-- JDK definitions -->
+  
+  <property name="jdk.bin.1.7" value="${jdk.home.1.7}/bin"/>
+  <path id="jdk.classpath.1.7">
+    <fileset dir="${jdk.home.1.7}">
+      <include name="jre/lib/charsets.jar"/>
+      <include name="jre/lib/deploy.jar"/>
+      <include name="jre/lib/ext/access-bridge-64.jar"/>
+      <include name="jre/lib/ext/dnsns.jar"/>
+      <include name="jre/lib/ext/jaccess.jar"/>
+      <include name="jre/lib/ext/localedata.jar"/>
+      <include name="jre/lib/ext/sunec.jar"/>
+      <include name="jre/lib/ext/sunjce_provider.jar"/>
+      <include name="jre/lib/ext/sunmscapi.jar"/>
+      <include name="jre/lib/ext/zipfs.jar"/>
+      <include name="jre/lib/javaws.jar"/>
+      <include name="jre/lib/jce.jar"/>
+      <include name="jre/lib/jfr.jar"/>
+      <include name="jre/lib/jfxrt.jar"/>
+      <include name="jre/lib/jsse.jar"/>
+      <include name="jre/lib/management-agent.jar"/>
+      <include name="jre/lib/plugin.jar"/>
+      <include name="jre/lib/resources.jar"/>
+      <include name="jre/lib/rt.jar"/>
+    </fileset>
+  </path>
+  
+  <property name="project.jdk.home" value="${jdk.home.1.7}"/>
+  <property name="project.jdk.bin" value="${jdk.bin.1.7}"/>
+  <property name="project.jdk.classpath" value="jdk.classpath.1.7"/>
+  
   
   <!-- Project Libraries -->
   
@@ -86,6 +117,18 @@
     <pathelement location="${basedir}/lib/xmlrpc-common-3.1.3.jar"/>
     <pathelement location="${basedir}/lib/xmlrpc-server-3.1.3.jar"/>
   </path>
+  <!-- Register Custom Compiler Taskdefs -->
+  <property name="javac2.home" value="${idea.home}/lib"/>
+  <path id="javac2.classpath">
+    <pathelement location="${javac2.home}/javac2.jar"/>
+    <pathelement location="${javac2.home}/jdom.jar"/>
+    <pathelement location="${javac2.home}/asm-all.jar"/>
+    <pathelement location="${javac2.home}/jgoodies-forms.jar"/>
+  </path>
+  <target name="register.custom.compilers">
+    <taskdef name="javac2" classname="com.intellij.ant.Javac2" classpathref="javac2.classpath"/>
+    <taskdef name="instrumentIdeaExtensions" classname="com.intellij.ant.InstrumentIdeaExtensions" classpathref="javac2.classpath"/>
+  </target>
   
   <!-- Modules -->
   
@@ -95,6 +138,9 @@
   <dirname property="module.autosimulator.basedir" file="${ant.file}"/>
   
   
+  <property name="module.jdk.home.autosimulator" value="${jdk.home.1.7}"/>
+  <property name="module.jdk.bin.autosimulator" value="${jdk.bin.1.7}"/>
+  <property name="module.jdk.classpath.autosimulator" value="jdk.classpath.1.7"/>
   
   <property name="compiler.args.autosimulator" value="-encoding UTF-8 -source 1.7 -target 1.7 ${compiler.args}"/>
   
@@ -106,6 +152,7 @@
   </path>
   
   <path id="autosimulator.module.production.classpath">
+    <path refid="${module.jdk.classpath.autosimulator}"/>
     <path refid="library.com.google.code.gson:gson:2.3.1.classpath"/>
     <path refid="library.com.budhash.cliche:cliche-shell:0.9.3.classpath"/>
     <path refid="library.org.apache.xmlrpc:xmlrpc-client:3.1.3.classpath"/>
@@ -121,6 +168,7 @@
   </path>
   
   <path id="autosimulator.module.classpath">
+    <path refid="${module.jdk.classpath.autosimulator}"/>
     <pathelement location="${autosimulator.output.dir}"/>
     <path refid="library.com.google.code.gson:gson:2.3.1.classpath"/>
     <path refid="library.com.budhash.cliche:cliche-shell:0.9.3.classpath"/>
@@ -155,15 +203,15 @@
   
   <target name="compile.module.autosimulator" depends="compile.module.autosimulator.production,compile.module.autosimulator.tests" description="Compile module AutoSimulator"/>
   
-  <target name="compile.module.autosimulator.production" description="Compile module AutoSimulator; production classes">
+  <target name="compile.module.autosimulator.production" depends="register.custom.compilers" description="Compile module AutoSimulator; production classes">
     <mkdir dir="${autosimulator.output.dir}"/>
-    <javac destdir="${autosimulator.output.dir}" debug="${compiler.debug}" nowarn="${compiler.generate.no.warnings}" memorymaximumsize="${compiler.max.memory}" fork="true">
+    <javac2 destdir="${autosimulator.output.dir}" debug="${compiler.debug}" nowarn="${compiler.generate.no.warnings}" memorymaximumsize="${compiler.max.memory}" fork="true" executable="${module.jdk.bin.autosimulator}/javac">
       <compilerarg line="${compiler.args.autosimulator}"/>
       <bootclasspath refid="autosimulator.module.bootclasspath"/>
       <classpath refid="autosimulator.module.production.classpath"/>
       <src refid="autosimulator.module.sourcepath"/>
       <patternset refid="excluded.from.compilation.autosimulator"/>
-    </javac>
+    </javac2>
     
     <copy todir="${autosimulator.output.dir}">
       <fileset dir="${module.autosimulator.basedir}/src">
@@ -173,7 +221,7 @@
     </copy>
   </target>
   
-  <target name="compile.module.autosimulator.tests" depends="compile.module.autosimulator.production" description="compile module AutoSimulator; test classes" unless="skip.tests"/>
+  <target name="compile.module.autosimulator.tests" depends="register.custom.compilers,compile.module.autosimulator.production" description="compile module AutoSimulator; test classes" unless="skip.tests"/>
   
   <target name="clean.module.autosimulator" description="cleanup module">
     <delete dir="${autosimulator.output.dir}"/>
