UDP Client and Server

--- a/build.xml
+++ b/build.xml
@@ -117,18 +117,6 @@
     <pathelement location="${basedir}/lib/xmlrpc-common-3.1.3.jar"/>
     <pathelement location="${basedir}/lib/xmlrpc-server-3.1.3.jar"/>
   </path>
-  <!-- Register Custom Compiler Taskdefs -->
-  <property name="javac2.home" value="${idea.home}/lib"/>
-  <path id="javac2.classpath">
-    <pathelement location="${javac2.home}/javac2.jar"/>
-    <pathelement location="${javac2.home}/jdom.jar"/>
-    <pathelement location="${javac2.home}/asm-all.jar"/>
-    <pathelement location="${javac2.home}/jgoodies-forms.jar"/>
-  </path>
-  <target name="register.custom.compilers">
-    <taskdef name="javac2" classname="com.intellij.ant.Javac2" classpathref="javac2.classpath"/>
-    <taskdef name="instrumentIdeaExtensions" classname="com.intellij.ant.InstrumentIdeaExtensions" classpathref="javac2.classpath"/>
-  </target>
   
   <!-- Modules -->
   
@@ -203,15 +191,15 @@
   
   <target name="compile.module.autosimulator" depends="compile.module.autosimulator.production,compile.module.autosimulator.tests" description="Compile module AutoSimulator"/>
   
-  <target name="compile.module.autosimulator.production" depends="register.custom.compilers" description="Compile module AutoSimulator; production classes">
+  <target name="compile.module.autosimulator.production" description="Compile module AutoSimulator; production classes">
     <mkdir dir="${autosimulator.output.dir}"/>
-    <javac2 destdir="${autosimulator.output.dir}" debug="${compiler.debug}" nowarn="${compiler.generate.no.warnings}" memorymaximumsize="${compiler.max.memory}" fork="true" executable="${module.jdk.bin.autosimulator}/javac">
+    <javac destdir="${autosimulator.output.dir}" debug="${compiler.debug}" nowarn="${compiler.generate.no.warnings}" memorymaximumsize="${compiler.max.memory}" fork="true" executable="${module.jdk.bin.autosimulator}/javac">
       <compilerarg line="${compiler.args.autosimulator}"/>
       <bootclasspath refid="autosimulator.module.bootclasspath"/>
       <classpath refid="autosimulator.module.production.classpath"/>
       <src refid="autosimulator.module.sourcepath"/>
       <patternset refid="excluded.from.compilation.autosimulator"/>
-    </javac2>
+    </javac>
     
     <copy todir="${autosimulator.output.dir}">
       <fileset dir="${module.autosimulator.basedir}/src">
@@ -221,7 +209,7 @@
     </copy>
   </target>
   
-  <target name="compile.module.autosimulator.tests" depends="register.custom.compilers,compile.module.autosimulator.production" description="compile module AutoSimulator; test classes" unless="skip.tests"/>
+  <target name="compile.module.autosimulator.tests" depends="compile.module.autosimulator.production" description="compile module AutoSimulator; test classes" unless="skip.tests"/>
   
   <target name="clean.module.autosimulator" description="cleanup module">
     <delete dir="${autosimulator.output.dir}"/>
