--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
 
 
     <path id="classpath">
-        <fileset dir="${lib.dir}" includes="*.jar"/>
+        <fileset dir="${lib.dir}" includes="**/*.jar"/>
     </path>
 
     <target name="clean">
